# tweeter-backend

./: .env  .gitignore  DEPLOYMENT_GUIDE.md  Procfile  README.md  init_app.py  manage.py  pyproject.toml  render.yaml  requirements.txt
accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
accounts/management/commands/: create_superuser.py  seed_users.py
accounts/migrations/: 0001_initial.py  0002_remove_follow_unique_follow_follow_unique_follow.py
backend/: media_handler.py  settings.py  urls.py  wsgi.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
tweeter_backend/: asgi.py  settings.py  urls.py  wsgi.py
tweets/: models.py  serializers.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_rename_comments_comment.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_following.py
